# Automatic-Estimation-of-Human-Body-Measurements

./: .gitignore  pyproject.toml
src/bodym/: __init__.py  abs_eq2_renderer.py  app_gradio.py  compute_norm_stats.py  data.py  evaluate.py  model.py  train.py  train_unfrozen_scratch.py  utils.py
